syntax = "proto3";

package pb;
option go_package = "github.com/dnr/styx/pb";

import "entry.proto";

// Parameters that have to be agreed on by manifester and daemon.
message GlobalParams {
  // Default chunk shift (if not specified in entry) is always 16.
  reserved 1;
  // Digest algorithm, e.g. "sha256"
  string digest_algo = 2;
  // Bits of digest used, e.g. 192
  int32 digest_bits = 3;
}

// Parameters that can be used to configure a styx daemon.
message DaemonParams {
  GlobalParams params = 1;
  // URL for manifester service, chunk reads, and chunk diffs.
  string manifester_url = 2;
  string manifest_cache_url = 5;
  string chunk_read_url = 3;
  string chunk_diff_url = 4;

  // Size to shard manifest. If missing, daemon uses a default.
  int64 shard_manifest_bytes = 6;
}

message SignedMessage {
  // Params for hashing/chunking contained data, and also used for signature.
  GlobalParams params = 1;
  // Single entry representing contained data.
  // Type must be REGULAR.
  // Path should represent message type and context.
  Entry msg = 2;

  // These should be the same length:
  repeated string key_id = 3;
  repeated bytes signature = 4;
}
